# back/app/Http/Requests/Attendance/AttendanceClockRequest.php
@@ -1,0 +1,12 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Http\Requests\Attendance;
+
+use App\Http\Requests\BaseRequest;
+
+/**
+ * 打刻のリクエスト
+ */
+final class AttendanceClockRequest extends BaseRequest {}
