# front/src/__generated__/model/index.ts
@@ -27,10 +27,12 @@ export * from "./attendanceBreakEndBodyBody";
 export * from "./attendanceBreakEndRequest";
 export * from "./attendanceBreakStartBodyBody";
 export * from "./attendanceBreakStartRequest";
+export * from "./attendanceClockBodyBody";
 export * from "./attendanceClockInBodyBody";
 export * from "./attendanceClockInRequest";
 export * from "./attendanceClockOutBodyBody";
 export * from "./attendanceClockOutRequest";
+export * from "./attendanceClockRequest";
 export * from "./attendanceIndexRequest";
 export * from "./attendanceResponse";
 export * from "./attendanceStatus";
